--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/faviconmim.png" />
+    <link rel="icon" href="%PUBLIC_URL%/mimfavicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -34,7 +34,7 @@
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>My Interior Mart is a India's 1st Construction & Interior industry Search Engine.</noscript>
     <div id="root"></div>
 
     <!-- Google Tag Manager (noscript) -->
