--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>My Interior Mart</title>
+
+    <!-- Metadata for sharing -->
+     <meta  property="og:title" content="My Interior Mart"/>
+     <meta property="og:image" content="https://myinteriormart.com/mimfavicon.png" />
+     <!-- <link rel="icon" type="image/png" sizes="16x16" href="https://softmanager.in/user-uploads/favicon/b833169295707beebc111612807ecdac.png"> -->
+
+
+
+
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
