--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="google-site-verification"
+      content="Udnfkf6OU3-Q5FwhfUc5Yi3GkPsRQabLWThg9ty1MHI"
+    />
     <!-- <link rel="icon" href="%PUBLIC_URL%/mimfavicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="Title"
+      content="my Interior Mart Smart Choice of Smart People."
+    />
+    <meta
       name="description"
-      content="My Interiormart"
+      content="Boost your business with myinteriormart’s advertising solutions. Reach potential customers in your country &amp; enhance your brand visibility! To know advertisement plans, visit our page today!."
+    />
+    <meta
+      name="keywords"
+      content="myinteriormart advertising, advertise with my interior mart, promote on myinteriormart, online business promotion, online business advertising, online advertising, local business marketing"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -16,15 +28,145 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>My Interior Mart</title>
+    <title>my Interior Mart Smart Choice of Smart People.</title>
 
     <!-- Metadata for sharing -->
-     <meta  property="og:title" content="My Interior Mart"/>
-     <meta property="og:image" content="https://myinteriormart.com/mimfavicon.png" />
-     <!-- <link rel="icon" type="image/png" sizes="16x16" href="https://softmanager.in/user-uploads/favicon/b833169295707beebc111612807ecdac.png"> -->
+    <meta
+      property="og:title"
+      content="Advertise Your Business in your country with myinteriormart Ads Program"
+    />
+    <meta
+      property="og:description"
+      content="Boost your business with myinteriormart’s advertising solutions. Reach potential customers in your country &amp; enhance your brand visibility! To know advertisement plans, visit our page today!."
+    />
+    <meta
+      property="og:keywords"
+      content="myinteriormart advertising, advertise with my interior mart, promote on myinteriormart, online business promotion, online business advertising, online advertising, local business marketing"
+    />
+    <meta property="og:url" content="https://www.myinteriormart.com/mumbai" />
+    <meta property="og:site_name" content="myinteriormart" />
+    <link rel="canonical" href="https://www.myinteriormart.com/mumbai" />
 
+    <meta
+      property="og:image"
+      content="https://myinteriormart.com/mimfavicon.png"
+    />
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="https://softmanager.in/user-uploads/favicon/b833169295707beebc111612807ecdac.png"> -->
 
-
+    <script data-react-helmet="true" type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "myinteriormart",
+            "item": "https://www.myinteriormart.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Advertise Your Business with myinteriormart Ads Program",
+            "item": "https://www.myinteriormart.com/Advertise"
+          }
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+            "@context": "https://schema.org",
+                "@type": "FAQPage",
+                    "mainEntity": [
+                        {
+                            "@type": "Question",
+                            "name": "What benefits will I get from a paid listing on myinteriormart?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "myinteriormart is local search engine. A paid listing makes your business more visible to customers. It makes it easier for you to reach your goals and grow faster."
+                            }
+                        },
+                        {
+                            "@type": "Question",
+                            "name": "How can I choose the best paid plan for me?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "Choosing a higher plan will get your business more exposure. For maximum customer reach, we recommend selecting the pro package. Alternatively, you can start with the standard or the premium plan and gradually upgrade as your business grows."
+                            }
+                        },
+                        {
+                            "@type": "Question",
+                            "name": " How does MIM Verified + Trust work?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "MIM Verified + Trust is a special badge that indicates your business is trustworthy. It makes customers feel more confident in your business, resulting in more sales."
+                            }
+                        },
+                        {
+                            "@type": "Question",
+                            "name": "What are the advantages of upgrading, and how do the different packages differ?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "By upgrading your package, you will have a better chance of getting more customers and being seen on myinteriormart. Compared to the standard plan, the pro and premium packages offer 3x and 2x more visibility, respectively"
+                            }
+                        },
+                        {
+                            "@type": "Question",
+                            "name": "What payment methods are available?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "You can pay by credit cards, debit cards, or UPI. The payment can be made up-front for a year or on a monthly basis."
+                            }
+                        },
+                        {
+                            "@type": "Question",
+                            "name": "Can I change my package later?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "Yes. You can upgrade or change your plan at any time based on your business needs."
+                            }
+                        },
+                        {
+                            "@type": "Question",
+                            "name": "I only want leads from specific areas. Is that possible?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "Yes. You can target leads from specific regions to get inquiries from the places you want."
+                            }
+                        },
+                        {
+                            "@type": "Question",
+                            "name": "Can I stop the campaign and start it later?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "We do not offer this option at the moment."
+                            }
+                        },
+                        {
+                            "@type": "Question",
+                            "name": "Will the monthly payment change during my contract?",
+                            "acceptedAnswer": {
+                                "@type": "Answer",
+                                "text": "You will be charged the same amount each month until you upgrade your campaign, or buy an add-on."
+                            }
+                        }
+                    ]
+            }
+            <script type="application/ld+json">
+            {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "My Interior Mart",
+            "alternateName": "myinteriormart",
+            "url": "https://myinteriormart.com/mumbai",
+            "description": "Boost your business with myinteriormart’s advertising solutions. Reach potential customers and enhance your brand visibility with our various advertising channels! To get started, visit our page today!",
+            "logo": "https://admin.myinteriormart.com/uploads/6894b8b3-1507-4056-9360-33f8d564fe83/logo_sticky.svg",
+            "sameAs": [
+            "https://www.facebook.com/myinteriormart",
+            "https://twitter.com/myinteriormart"
+            ]
+            }
+    </script>
 
     <!-- Google Tag Manager -->
     <script>
@@ -43,7 +185,7 @@
   </head>
 
   <body>
-    <noscript>My Interior Mart is a India's 1st Construction & Interior industry Search Engine.</noscript>
+    <noscript>my Interior Mart Smart Choice of Smart People.</noscript>
     <div id="root"></div>
 
     <!-- Google Tag Manager (noscript) -->
