--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
     <!-- Metadata for sharing -->
     <meta
       property="og:title"
-      content="Advertise Your Business in your country with myinteriormart Ads Program"
+      content="India's first construction & interior search engine"
     />
-    <meta
+    <!-- <meta
       property="og:description"
       content="Boost your business with myinteriormart’s advertising solutions. Reach potential customers in your country &amp; enhance your brand visibility! To know advertisement plans, visit our page today!."
-    />
+    /> -->
     <meta
       property="og:keywords"
       content="myinteriormart advertising, advertise with my interior mart, promote on myinteriormart, online business promotion, online business advertising, online advertising, local business marketing"
@@ -49,7 +49,7 @@
 
     <meta
       property="og:image"
-      content="https://myinteriormart.com/mimfavicon.png"
+      content="https://myinteriormart.com/myinteriorlog.png"
     />
     <!-- <link rel="icon" type="image/png" sizes="16x16" href="https://softmanager.in/user-uploads/favicon/b833169295707beebc111612807ecdac.png"> -->
 
