--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <!-- Metadata for sharing -->
     <meta
       property="og:title"
-      content="India's first construction & interior search engine"
+      content="India's 1st Construction & Interior Search Engine"
     />
     <!-- <meta
       property="og:description"
