--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,8 @@
             {
             "@context": "https://schema.org",
             "@type": "Organization",
-            "name": "My Interior Mart",
+            <!-- "name": "My Interior Mart ", -->
+            "name": "My Interior Mart - Smart Choice of Smart People ",
             "alternateName": "myinteriormart",
             "url": "https://myinteriormart.com/mumbai",
             "description": "Boost your business with myinteriormart’s advertising solutions. Reach potential customers and enhance your brand visibility with our various advertising channels! To get started, visit our page today!",
