client,certificate hide until approved and changes

--- a/public/index.html
+++ b/public/index.html
@@ -183,6 +183,16 @@
       })(window, document, "script", "dataLayer", "GTM-WMQ6X7TJ");
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Google analytics code -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-447JNNFXH6"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-447JNNFXH6');
+</script>
   </head>
 
   <body>
