--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
       property="og:keywords"
       content="myinteriormart advertising, advertise with my interior mart, promote on myinteriormart, online business promotion, online business advertising, online advertising, local business marketing"
     />
-    <meta property="og:url" content="https://www.myinteriormart.com/mumbai" />
+    <meta property="og:url" content="https://www.myinteriormart.com" />
     <meta property="og:site_name" content="myinteriormart" />
-    <link rel="canonical" href="https://www.myinteriormart.com/mumbai" />
+    <link rel="canonical" href="https://www.myinteriormart.com" />
 
     <meta
       property="og:image"
@@ -156,7 +156,7 @@
             <!-- "name": "My Interior Mart ", -->
             "name": "My Interior Mart - Smart Choice of Smart People ",
             "alternateName": "myinteriormart",
-            "url": "https://myinteriormart.com/mumbai",
+            "url": "https://myinteriormart.com",
             "description": "Boost your business with myinteriormart’s advertising solutions. Reach potential customers and enhance your brand visibility with our various advertising channels! To get started, visit our page today!",
             "logo": "https://admin.myinteriormart.com/uploads/6894b8b3-1507-4056-9360-33f8d564fe83/logo_sticky.svg",
             "sameAs": [
