serch, url, meta title

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
     
 
     <!-- Metadata for sharing -->
-    <meta
+    <!-- <meta
       property="og:title"
       content="My Interior Mart is a India's 1st Construction & Interior Industry Search Engine"
-    />
+    /> -->
     <!-- <meta
       property="og:description"
       content="Boost your business with myinteriormart’s advertising solutions. Reach potential customers in your country &amp; enhance your brand visibility! To know advertisement plans, visit our page today!."
